0.24.6

  * Fixed problem with GPS for Fremantle

0.24.5

  * Fixed problem with button GPS

0.24.4

  * Various minor fixes
  * Fixed small memory leaks in configurations window
  * Fixed bug #5083 "Remove/hide mnemonics for buttons"
  * Fixed bug #5804 '"Source" should default to "weather.com" if  no other providers available'
  * Fixed bug #5122 "XB-Maemo-Display-Name not used in debian/control"
  * Fixed bug #5086 "Settings > Update > Period: Cropped "4 hours" setting"
  * Fixed bug #5087 '"Not available for this country" instead of empty "Selecting station" list'

0.24.3
  * Various minor fixes
  * Fixed bug #4748 "omweather asks me to reboot my device on every update" for Fremantle
  * Updated German translations

0.24.2
  * Various minor fixes
  * Fixed bug #4971 ""Wrong station code or ZIP code!!" warning when installing"

0.24
  * Updated German, Finish, Spanish, Russian translations
  * Done automatically download the weather forecast after adding of a station, if device is connected to Internet
  * Fixed a problem with gps station choosing
  * Small fixes in popup windows
  * Changed in postinstall script
  * Changed parameter 'type of connection for automatically downloading' by default is WLAN only
  * Changed parameter 'Swap temperature' by default is TRUE
  * Added 'hd_home_plugin_item_set_settings' to widget
  * Various minor fixes

0.23.3
  * Modified acknowledgment and copyright lists
  * Various small fixes
  * Fixed memory leaks
  * Corrected behaviour of details weather forecasts for a current day

0.23.2
  * Fixed problem with switching between stations if stations list has nil stations 
  * Fixed problem with detailed weather for current day
  * Now next station changing in inside popup window without destroying it
  * Fixed problem with scrolling in popup window
  * Done feature request from Daniel Wilms "automatically connect to gps service after selecting of gps station"

0.23.1
  * Done scroll to child for pannable_area in window popup