@@ -98,6 +98,16 @@ binary-arch: build install
 	dh_shlibdeps
 	dh_gencontrol
 	maemo-optify
+# This is the HACK for optified
+	rm -f debian/omweather/usr/share/omweather
+	mkdir -p debian/omweather/usr/share/omweather/icons
+	ln -s /opt/maemo/usr/share/omweather/button_icons debian/omweather/usr/share/omweather/button_icons
+	ln -s /opt/maemo/usr/share/omweather/icons/Glance debian/omweather/usr/share/omweather/icons/Glance
+	ln -s /opt/maemo/usr/share/omweather/images debian/omweather/usr/share/omweather/images
+	ln -s /opt/maemo/usr/share/omweather/moon_icons debian/omweather/usr/share/omweather/moon_icons
+	ln -s /opt/maemo/usr/share/omweather/city_in_clock.txt debian/omweather/usr/share/omweather/city_in_clock.txt
+	ln -s /opt/maemo/usr/share/omweather/style.rc debian/omweather/usr/share/omweather/style.rc
+	cp debian/omweather/opt/maemo/usr/share/omweather/omweather-home.desktop debian/omweather/usr/share/omweather/omweather-home.desktop
 	dh_md5sums
 	dh_builddeb
 
