@@ -7,6 +7,8 @@ omweather (0.25) unstable; urgency=low
 omweather (0.24.6) unstable; urgency=low
 
   * Fixed problem with GPS for Fremantle
+  * Fixed bug with null icons on display if iconset was deinstalled from system
+  * Done optified
 
  -- Vlad Vasiliev <vlad@gas.by>  Thu, 27 Sep 2009 19:15:10 +0200
 
